--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -10,8 +10,7 @@ SRC = main.cpp	\
 	  Span.cpp
 SRCS = $(addprefix $(SRCS_DIR)/, $(SRC))
 
-INCLUDES_DIR = include
-INCLUDES = -I$(INCLUDES_DIR)
+INCLUDES = -I$(SRCS_DIR)
 OBJS_DIR = obj
 OBJS = $(patsubst $(SRCS_DIR)/%.cpp, $(OBJS_DIR)/%.o,$(SRCS))
 DEPS = $(patsubst $(SRCS_DIR)/%.cpp, $(OBJS_DIR)/%.d,$(SRCS))
